# zero2prod

./: Cargo.toml
.github/workflows/: main.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
tests/: health_check.rs
