[package]
name = "zero2prod"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.19"
config = "0.11.0"
serde = { version = "1.0.133", features = ["derive"] }
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }

[dependencies.sqlx]
version = "0.5.10"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = { version = "0.11.8", features = ["json"] }
